--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ exclude:
   - screenshot.png
   - vendor
 favicon: /assets/img/favicon.ico
+css: /assets/main.css
 
 # Appreciating Your Boss
 #reward_comment: 坚持原创技术分享，您的支持将鼓励我继续创作！
