--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ author: 薛勤
 description: "一位阿里人的技术进阶之路"
 baseurl:  # the subpath of your site, e.g. /blog
 url:  # the base hostname & protocol for your site, e.g. http://example.com
-lang: en
+lang: zh
 timezone: UTC
 exclude:
   - Gemfile
@@ -30,10 +30,10 @@ exclude:
   - jekyll-whiteglass.gemspec
   - screenshot.png
   - vendor
+
+# static file
 favicon: /assets/img/favicon.ico
 css: /assets/main.css
-
-post_imgs_prefix: https://raw.githubusercontent.com/yueshutong/yueshutong.github.io/master/_posts
 
 # Appreciating Your Boss
 #reward_comment: 坚持原创技术分享，您的支持将鼓励我继续创作！
