--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: "一位阿里人的技术进阶之路"
 baseurl:  # the subpath of your site, e.g. /blog
 url:  # the base hostname & protocol for your site, e.g. http://example.com
 lang: zh
-timezone: Asia/Shanghai # UTC
+timezone: UTC
 exclude:
   - Gemfile
   - Gemfile.lock
