--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,7 @@ alipay: /assets/img/alipay.png
 # Wechat Subscriber
 wechat_subscriber:
   enabled: true
+  token: VIP
   qcode: /assets/img/wechat2.png
   description: "欢迎您扫一扫订阅我的微信公众号！"
 
