--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,4 +10,4 @@ main:
   - title: "搜索"
     url: javascript:void(0);
   - title: "GitHub"
-    url: https://github.com/yueshutong
+    url: https://github.com/ystcode
