--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ baseurl:  # the subpath of your site, e.g. /blog
 url:  # the base hostname & protocol for your site, e.g. http://example.com
 lang: zh
 timezone: UTC
+future: true
 include:
   - _posts
 exclude:
