--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ alipay: /assets/img/alipay.png
 wechat_subscriber:
   enabled: true
   token: VIP
-  qcode: /assets/img/wechat2.png
+  qcode: /assets/img/wechat.png
   description: "欢迎您扫一扫订阅我的微信公众号！"
 
 # Social media
