删除无效文件

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,4 +8,4 @@ main:
   - title: "搜索"
     url: javascript:void(0);
   - title: "GitHub"
-    url: https://github.com/ystcode
+    url: https://github.com/onblog
