--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: 薛勤的博客
 author: 薛勤
-description: "一位阿里人的技术进阶之路"
+description: "我的技术进阶之路"
 baseurl:  # the subpath of your site, e.g. /blog
 url:  # the base hostname & protocol for your site, e.g. http://example.com
 lang: zh
@@ -84,3 +84,6 @@ kramdown:
   smart_quotes: lsquo,rsquo,ldquo,rdquo
   toc_levels: 1..6
 
+# feed (RSS)
+feed:
+  path: /feed.xml
